# Bevy_Studies-Calc_Sim

./: Cargo.toml  README.md  README.txt  build.rs
assets/: calculator.glb  cube.glb
assets/icon/: icon.kra
assets/models/: calculator.blend  calculator.blend1
src/: calculator.rs  cam_calc_screen.rs  cam_ui.rs  cam_world.rs  game_env.rs  lib.rs  main.rs  old.rs
tests/: lib_tests.rs
