[package]
name = "calc_sim"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = {version = "0.14", features = ["mp3"]}
bevy_mod_raycast = "0.18.0"
image = "0.24"
winit = "0.30" 

[build-dependencies]
winres = "0.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
